sumo/tests/traci/VariableRetrieval/Junction/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Wed May 20 16:31:16 2009


-> Command sent: <SimulationStep>:
  TargetTime=5.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=169 varID=66 objID=xxx
.. Answered with error to command (169), [description: Junction 'xxx' is not known]

-> Command sent: <SimulationStep>:
  TargetTime=6.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
